@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-25T08:08:17Z",
-  "count_outdated" : 1681,
-  "uniques_outdated" : 485,
-  "count" : 1711,
+  "timestamp" : "2022-07-25T16:06:54Z",
+  "count_outdated" : 1683,
+  "uniques_outdated" : 486,
+  "count" : 1712,
   "uniques" : 501,
   "clones" : [
-    {
-      "timestamp": "2022-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 3,
