@@ -1,12 +1,7 @@
 {
-  "count": 30,
+  "count": 29,
   "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2022-07-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 3,
